chore: ports various configuration from old project
this ports packages we were using in the original attempt along with
netlify configuration for routes and v2 migration for remix

--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,9 @@ publish = "public"
 [dev]
 command = "npm run dev"
 targetPort = 3000
+
+[[redirects]]
+from = "/api/*"
+to = "http://localhost:8000/:splat"
+status = 200
+headers = { X-From = "Netlify" }
