--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "predev": "rimraf ./.netlify/edge-functions/",
     "dev": "remix dev",
     "start": "netlify serve",
-    "typecheck": "tsc -b"
+    "typecheck": "tsc -b",
+    "codegen": "orval"
   },
   "dependencies": {
     "@netlify/edge-functions": "^2.0.0",
     "@netlify/functions": "^1.3.0",
     "@netlify/remix-edge-adapter": "1.2.0",
     "@remix-run/react": "^1.17.1",
+    "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -24,7 +26,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
+    "msw": "^1.2.2",
+    "orval": "^6.16.0",
     "rimraf": "^4.1.4",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.8.4"
   },
   "engines": {
