--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,8 @@ publish = "public"
 command = "npm run dev"
 targetPort = 3000
 
-[[redirects]]
-from = "/api/*"
-to = "http://localhost:8000/:splat"
-status = 200
-headers = { X-From = "Netlify" }
+# [[redirects]]
+# from = "/api/*"
+# to = "http://localhost:8000/:splat"
+# status = 200
+# headers = { X-From = "Netlify" }
