--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@netlify/edge-functions": "^2.0.0",
     "@netlify/functions": "^1.3.0",
     "@netlify/remix-edge-adapter": "1.2.0",
+    "@remix-run/deno": "^1.18.0",
     "@remix-run/react": "^1.17.1",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
