--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "psychedelic-stack",
+  "version": "0.1.0",
+  "description": "",
+  "homepage": "",
+  "bugs": "",
   "private": true,
   "sideEffects": false,
   "scripts": {
@@ -15,10 +20,12 @@
     "@netlify/remix-edge-adapter": "1.2.0",
     "@remix-run/deno": "^1.18.0",
     "@remix-run/react": "^1.17.1",
+    "@remix-validated-form/with-zod": "^2.0.6",
     "axios": "^1.4.0",
     "cross-env": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-validated-form": "^5.0.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.17.1",
